fixed pmd:IntegerInstantiation
SVN-Revision: 15489